sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:2: error: Missing closing brace `}' assumed here
def combSort() {
^AlgCombSort:2: error: expected class or object definition
def combSort() {
^AlgCombSort:16: error: Missing closing brace `}' assumed here
  } while(ecart > 1 || ! sorted ) 
  ^