sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Int = getNombreValeurs()
  do{
    var sorted = true
    if (ecart >1) {
      ecart = (ecart.toDouble/1.3).toInt
    }
    var i:Int =0
    while( i+ecart < getNombreValeurs()){
      if (! plusPetit(i,i+1)) {
        echange(i,i+1)
        sorted = false
      i = i+1
      }
  } while(ecart > 1 || ! sorted )